syntax = "proto3";

package yyy;

message data
{
	int32 age = 1;		//年龄
	string name =2;	//姓名
	bool sex=3;
	int64 money=4;	//钱
	uint32 back_money=5; //仓库里的钱
	uint64 crc=6; //crc验证码
	bytes role_data=7; //人物数据
	float hp=8; //人物血量
	double mana=9; //人物蓝量
	fixed32 input_stream=10; //输入流
	fixed64 output_stream=11; //输出流
}